--- a/.spi.yml
+++ b/.spi.yml
@@ -1,5 +1,5 @@
 version: 1
 builder:
   configs:
-    - documentation_targets: [SharedGraphicsTools]
+    - documentation_targets: [shared-graphics-tools]
       scheme: shared-graphics-tools
